--- a/client/src/index.css
+++ b/client/src/index.css
@@ -51,7 +51,10 @@ body {
   background: var(--clr-grey-10);
   color: var(--clr-grey-1);
   line-height: 1.5;
-  font-size: .875rem
+  font-size: .875rem;
+  display:flex;
+  align-items: center;
+  justify-content: center;
 }
 
 ul {
