--- a/client/src/index.css
+++ b/client/src/index.css
@@ -153,7 +153,10 @@ p {
     left: 50%;
     transform: translate(-50%, -50%);
 }
-
+.login{
+  font-size: 1.2rem;
+  color: var(--clr-primary-4);
+}
 .section {
   padding: 5rem 0
 }
